--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="nav">
                     <ul>
-                        <li><a href="index.html" class="home2">Home</a></li>
+                        <li><a href="#" class="home2">Home</a></li>
                         <li><a href="project.html" class="projects2">Projects</a></li>
                         <li><a href="contact.html" class="contacts2">Contacts</a></li>
                     </ul>
