--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                     <ul>
                         <li><a href="index.html" class="home2">Home</a></li>
                         <li><a href="project.html" class="projects2">Projects</a></li>
-                        <li><a href="contact.html" class="contacts2">Contacts</a></li>
+                        <li><a href="#" class="contacts2">Contacts</a></li>
                     </ul>
                 </div>
                 <div class="privacy">
