--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
                 <div class="nav">
                     <ul>
                         <li><a href="index.html" class="home2">Home</a></li>
-                        <li><a href="project.html" class="projects2">Projects</a></li>
+                        <li><a href="#" class="projects2">Projects</a></li>
                         <li><a href="contact.html" class="contacts2">Contacts</a></li>
                     </ul>
                 </div>
